--- a/app/src/App.css
+++ b/app/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.error-message {
+  font-size: 12px;
+  font-weight: 300;
+  color: #ffffff;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
